# audit-platform

./: .gitignore  README.md
ApiGateway/: Dockerfile  Taskfile.yaml  config_fastapi.json  docker-compose.yml  manage.py  pyproject.toml
ApiGateway/apigateway/: __init__.py  api_v1.py  baseclasses.py  constants.py  controls.py  exceptions.py  grpc.py  kafka.py  structures.py
ApiGateway/apigateway/actors/: __init__.py  bus.py  receive.py
ApiGateway/docs/: audit.yaml  discovery.yaml  gateway.yaml  netbox.yaml  notifications.yaml
ApiGateway/proto/: netbox.proto  netbox_pb2.py  netbox_pb2_grpc.py
Audit/: Dockerfile  config_fastapi.json  docker-compose.yml  manage.py  pyproject.toml
Audit/audit/: __init__.py  baseclasses.py  constants.py  controls.py  grpc.py  kafka.py  structures.py
Audit/audit/actors/: __init__.py  bus.py
Audit/proto/: netbox.proto  netbox_pb2.py  netbox_pb2_grpc.py
NetBox/: .dockerignore  Dockerfile  config_fastapi.json  docker-compose.yml  manage.py  pyproject.toml
NetBox/netbox/: __init__.py  baseclasses.py  constants.py  controls.py  rest.py  structures.py
NetBox/netbox/actors/: __init__.py  grpc.py
NetBox/proto/: netbox.proto
deployment/: Dockerfile  Taskfile.yaml  docker-compose.yml  pyproject.toml
deployment/prometheus/: prometheus.yml
