[tool.poetry]
name = "NetBox"
version = "1.0.0"
description = "NetBox Grpc server"
authors = ["Aleksandr Yurlov <Sasha.yur@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
commandlinestart = "^0.2.0"
fpiaioact = "1.0.2"
frpclnt = "^0.4.0"
grpcio = "^1.62"
protobuf = "^6.31.1"
config_fastapi = { version = "^1.0.1", source = "config_fastapi"}

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.64.0"

[[tool.poetry.source]]
name = "config_fastapi"
url = "https://dl.cloudsmith.io/basic/test-bex3/config_fastapi/python/simple/"
priority = "supplemental"


[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
