[tool.poetry]
name = "deployment"
version = "0.1.0"
description = "deploy all services"
authors = ["Aleksandr Yurlov <Sasha.yur@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
config_fastapi = { version = "^1.0.1", source = "config_fastapi"}
grpclnt = {version = "1.0.2", source = "grpclnt"}
kafkabus  = { version = "^1.0.8", source = "kafkabus"}




[[tool.poetry.source]]
name = "config_fastapi"
url = "https://dl.cloudsmith.io/basic/test-bex3/config_fastapi/python/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "grpclnt"
url = "https://dl.cloudsmith.io/basic/test-bex3/grpclnt/python/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "kafkabus"
url = "https://dl.cloudsmith.io/basic/test-bex3/kafkabus/python/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
